# bgmodel

./: .gitignore  .~lock.issue_tracking.ods#  README  __init__.py  environment.yml  git-workflow  install.sh  issue_tracking.ods  readme.md  sample.env  simulation_environment.sh  simulation_environment_2.6.0.sh
core/: pylab.py
core/misc_folder/: GP_STN_oscillations.py  calc_weight_comp.py  create_postgresql_tables.py  default_params.csv  diff_eq.py  kernel.py  load_FSN_IF.py  milner_jobb_file_test.sh  milner_test_module.py  mpi_import.py  mpi_import2.py  nullines.py  put_in_folders.py  sigmoid.py  sigmoid2.py  signal_filtering.py  test_GP_STN_oscillations.py  test_STN_reaction_delay.py  test_add_axes.py  test_autocorrelation.py  test_bcpnn_dopamine_simple.py  test_connect_only_locals.py  test_get_set.py  test_gpe.py  test_grid_spec.py  test_heatmap_hatch.py  test_izh.py  test_kwarg.py  test_mallet2006_statistics.py  test_mode_params.py  test_model2.py  test_mpi_script.py  test_nest_load.py  test_nest_speed_and_memory.py  test_patches.py  test_pcolor_and_marg_hist.py  test_plot_hist.py  test_plot_latex.py  test_poisson_generator_and_dep_syn.py  test_poisson_generator_dynamic.py  (+9 more)
core/toolbox/: .__afs7906  .__afsC84A  __init__.py  data_to_disk.py  interact.py  job_handler.py  jobb_handler.py  jobb_handler_test.py  misc.py  monkey_patch.py  monkey_patch_empty.py  mpi_comm_wrap.py  my_axes.py  my_nest.py  my_population.py  my_signal_tmp.py  my_signals.py  my_socket.py  my_topology.py  network_model.py~  parallel_excecution.py  parallel_excecution_test_milner.py  parallelization.py  plot_settings.py  postgresql.py  pylab.py  signal_processing.py
documents/: git-workflow
matlab/Analysis-scripts/: ._M1M2_all_avgfrs.m  ._M1M2_avg_fr.m  ._main.m  ._main_STN.m  ._main_all_avgfrs.m  ._main_all_avgfrs_STN_stim.m  ._main_all_avgfrs_multistim.m  ._main_multistim.m  ._main_spectrogram.m  ._main_spectrogram_func.m  ._main_spectrogram_test.m  DEL_main_avgfrs_multistim_eachtr_fast.m  DEL_main_avgfrs_multistim_eachtr_fasttemp.m  M1M2_avg_fr.m  all_trs_data_concatenation.m  all_trs_data_concatenation_trid_comp.m  avgfr_for_all_trs.m  data_size_reduction.m  main_SNr_dec_latency.m  main_SNr_dec_latency_ISI.m  main_SNr_dec_latency_ISI_STNGPA_stop_RELvsRELvis.m  main_SNr_dec_latency_ISI_STNGPA_stop_STRvsRELvis.m  main_SNr_dec_latency_ISI_STRvsRELvis.m  main_STN.m  main_all_avgfrs.m  main_all_avgfrs_GPA_stim.m  main_all_avgfrs_baseline.m  main_all_avgfrs_multistim.m  main_all_avgfrs_multistim_GPA.m  main_all_avgfrs_multistim_GPASTR_alltrs_from_avgfrdata.m  main_all_avgfrs_multistim_avgdiff.m  (+16 more)
misc/: conn-CO_M1.pkl  create_fake_connections.py  test_izh.py
nest/: .gitignore  compile_module_130701-2.2.2.sh  compile_module_150605-2.6.0.sh  compile_nest_2.2.2_and_module_130701.sh  compile_nest_2.4.2_and_module_150605.sh  compile_nest_2.6.0_and_module_150605.sh  install_2.12.0-mac.sh  install_2.12.0_beskow.sh  install_2.12.0_linux.sh  install_2.2.2_linux.sh  install_2.6.0_linux.sh  install_3.3_debian.sh  install_nest_2.12.0_and_module_2.12.0-mac.sh  install_nest_2.12.0_and_module_2.12.0.sh  readme.md  set-environment-2.12.0-beskow.sh
nest/module/module-130701/: Makefile.am  bcpnn_connection.cpp  bcpnn_connection.h  bcpnn_connection_dopamine-copy.h  bcpnn_connection_dopamine.cpp  bcpnn_connection_dopamine.h  bootstrap_old.sh  configure.ac  iaf_cond_alpha_bias.cpp  ml_module.cpp  ml_module.h  ml_module_names.h  my_aeif_cond_exp.cpp  my_aeif_cond_exp.h  my_aeif_cond_exp_2.h  my_poisson_generator.cpp  my_volume_transmitter.cpp  my_volume_transmitter.h  poisson_generator_dynamic.cpp
nest/module/module-130701/sli/: ml_module.sli  test.sli
nest/module/source/ml_module-3.5/src/: CMakeLists.txt  drop_odd_spike_connection.h  izhik_cond_exp.cpp  izhik_cond_exp.h  ml_module.cpp  ml_module.h  my_aeif_cond_exp.cpp  my_aeif_cond_exp.h  pif_psc_alpha.h  recording_backend_socket.cpp  recording_backend_socket.h  recording_backend_soundclick.cpp  recording_backend_soundclick.h  step_pattern_builder.cpp  step_pattern_builder.h
nest/module/source/mymodule-3.5/: CMakeLists.txt  README.rst
nest/module/source/mymodule-3.5/doc/: conf.py  extension_modules.rst  index.rst  neuron_models.rst
nest/module/source/mymodule-3.5/src/: CMakeLists.txt  ml_module.cpp  pif_psc_alpha.cpp
python/: __init__.py  pylab.py  readme.md  test_performance_nest_2.12.0.py
scripts/: install-module-conda.sh  install-nest-conda.sh
scripts_bcpnnbg/: simulate_network.py
scripts_inhibition/: FS_spike_detector-11-0.gdf  GP_STN_oscillations.py  Go_NoGo_compete.py  Go_NoGo_figure_factory.py  Go_NoGo_figure_factory2.py  Go_NoGo_figure_factory3.py  Go_NoGo_figure_factory4.py  Go_NoGo_performance.py  MSN_cluster_compete.py  activity.py  activity_FSN.py  activity_GPE.py  activity_GPE.py~  activity_MSN.py  activity_MSN.py~  activity_SNR.py  activity_STN.py  config.py  do.py  do_testing.py  effect_Go_NoGo_figure_factory2_amp_1.1.py  effect_Go_NoGo_selection:variability.py  effect_Go_NoGo_selection_variability.py  effect_beta_ZZZ13.py  effect_beta_ZZZ131.py  effect_beta_ZZZ1311.py  effect_beta_ZZZ13_null_down.py  effect_beta_ZZZ13_slow.py  effect_beta_ZZZ15.py  effect_beta_ZZZ15_slow.py  effect_beta_ZZZ16.py  effect_beta_ZZZ18.py  effect_beta_ZZZ19.py  effect_beta_ZZZ20.py  effect_beta_ZZZ21.py  effect_beta_ZZZ22.py  effect_beta_ZZZ28_slow.py  effect_beta_ZZZ8.py  effect_beta_ZZZ_conn_final.py  effect_beta_ZZZ_control_slow_beta.py  (+568 more)
scripts_jyotika/: jobb0_milner.sh  manager.py  oscillation_perturbations0.py  oscillation_perturbations41_slow.py  simulate_beta0.py  simulate_beta_ZZZ41_slow.py  simulate_inhibition0.py  simulate_network.py  test.py
scripts_mohammad/: config.py  fig_01_and_02_pert.py  fig_01_and_02_show.py  fig_01_and_02_sim_beta.py  fig_01_and_02_sim_inh.py  fig_01_and_02_sim_sw.py
toolbox/: __init__.py  data_processing.py  data_to_disk.py  default_params.py  misc.py  my_axes.py  my_nest.py  my_population.py  my_signals.py  network_connectivity.py  network_construction.py  network_handling.py  signal_processing.py  test.txt
(+1598 files in other folders)
